version/0.19/_sources/api/solver/_autosummary/settings/temperature_1.rst.txt
:orphan:

.. _temperature_1:

temperature
===========

.. autoclass:: ansys.fluent.core.solver.settings_241.temperature_1.temperature
    :show-inheritance:

.. rubric:: Attributes

==================================   =======================================================

Attribute                                                                            Summary

==================================   =======================================================
:ref:`option <option_8>`                 Specify how the boundary condition will be defined.

:ref:`value <value_4>`                              Specify value as constant or expression.

:ref:`profile_name <profile_name>`                          Specify the name of the profile.

:ref:`field_name <field_name>`                                Specify the name of the field.

:ref:`udf <udf>`                              Specify the name of the user-defined function.

==================================   =======================================================

.. rubric:: Included in:

============================================   =======================================

Parent                                                                         Summary

============================================   =======================================
:ref:`network_end_child <network_end_child>`       'child_object_type' of network_end.

:ref:`phase_child <phase_child_12>`                      'child_object_type' of phase.

============================================   =======================================

