version/0.25/_sources/api/solver/_autosummary/settings/temperature_1.rst.txt
:orphan:

.. _temperature_1:

temperature
===========

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.temperature_1.temperature
    :show-inheritance:

.. rubric:: Attributes

==================================   =======================================================

Attribute                                                                            Summary

==================================   =======================================================
:ref:`option <option_17>`                Specify how the boundary condition will be defined.

:ref:`value <value_13>`                             Specify value as constant or expression.

:ref:`profile_name <profile_name>`                          Specify the name of the profile.

:ref:`field_name <field_name>`                                Specify the name of the field.

:ref:`udf <udf>`                              Specify the name of the user-defined function.

==================================   =======================================================

.. rubric:: Included in:

================================   =================================================

Parent                                                                       Summary

================================   =================================================
:ref:`network_end <network_end>`                                 Help not available.

:ref:`thermal <thermal_4>`                                       Help not available.

:ref:`thermal <thermal_5>`                                       Help not available.

:ref:`thermal <thermal_6>`             Thermal settings for this boundary-condition.

================================   =================================================

